log
ju.,  5 de ago. de 2021 19:54:36: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c:12:8: error: redefinition of 'struct Pair'
 struct Pair {
        ^~~~
In file included from hashmap.c:6:0,
                 from test.c:4:
hashmap.h:14:16: note: originally defined here
 typedef struct Pair {
                ^~~~
test.c: In function 'search_test3':
test.c:280:63: error: format '%s' expects argument of type 'char *', but argument 3 has type 'void *' [-Werror=format=]
         sprintf(msg,"searchMap retorna un elemento con clave %s", map->buckets[map->current]->key);
                                                               ^
test.c: In function 'first_test':
test.c:349:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     char* aux = firstMap(map);
                 ^~~~~~~~
test.c:371:9: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     aux = firstMap(map);
         ^
cc1.exe: all warnings being treated as errors
Compilation failed
e60f376
